2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Updated Ukrainian translation. Thanks to all translators.
	* po/uk.po

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Bump up version number to 1.4.1.
	* configure.ac

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added unit tests for strjoin, strconcat and strappend.
	* test/a2functionalTest.cc

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Rewritten strconcat and strappend using operator+ instead of
	append().
	* src/a2functional.h

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Compile bencode.cc and BencodeTest.cc only if BitTorrent support
	is enabled.
	* src/Makefile.am
	* test/Makefile.am

2009-06-07  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added countSeeder() function which counts seeder in the given
	iterator range. Use it in ConsoleStatCalc and XmlRpcMethodImpl.
	* src/ConsoleStatCalc.cc
	* src/Peer.h
	* src/XmlRpcMethodImpl.cc
	* test/PeerTest.cc

2009-06-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Documented missing seeder in getPeers xml-rpc method.
	Documented uploadLength and numSeeders.
	* doc/aria2c.1.txt

2009-06-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added uploadLength and numSeeders to the response of tellStatus
	xml-rpc method. Assert that PeerStorage instance is not null
	instead of checking if statement. It should be non-null in this
	context.
	* src/XmlRpcMethodImpl.cc
	
2009-06-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Use htmlEscape instead of xmlEscape. Removed static function xmlEscape.
	* src/XmlRpcResponse.cc

2009-06-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Avoid intermediate object during string concatenation.
	* src/HttpRequest.cc

2009-06-06  Tatsuhiro Tsujikawa  <t-tujikawa@users.sourceforge.net>

	Added strjoin function template. Use it in pathJoin()
	* src/Util.h