@@ -77,7 +77,7 @@ bool PeerListenCommand::bindPort(uint16_t& port, IntSequence& seq)
   
   for(std::deque<int32_t>::const_iterator portItr = randPorts.begin();
       portItr != randPorts.end(); ++portItr) {
-    if(!(0 < (*portItr) && (*portItr) <= UINT16_MAX)) {
+    if(!(0 < (*portItr) && (*portItr) <= 65535)) {
       continue;
     }
     port = (*portItr);
